# tiled-acquisition

./: .gitignore  README.md  acquire.py  example_args.txt  main.py  pyproject.toml  run.ps1  testargs.txt
src/tile_coord/: run.ps1
src/tiled_acquisition/: main.py
src/utils/: run_progress.ps1  zulip_channel_updator.py  zulip_updator_v2.py
tests/: test_image_proc.py
tile_coord/: .gitignore  interpolate-z-coords.py
utils/: monitor_FLIM_folder.py  monitor_progressbar.py
